--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,9 @@
 * {
 	box-sizing: border-box;
 }
+body {
+	background: white;
+}
 @layer base {
 	body {
 		@apply bg-body font-secondary text-lg text-grey font-medium;
